--- a/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventsByTopic.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventsByTopic.cshtml
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <button class="btn btn-primary btn-block" type="submit" style="height: 47px; margin-top: -2px;">Submit</button>
+                    <button class="btn btn-info btn-block" type="submit" style="height: 47px; margin-top: -2px;">Submit</button>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                    <div class="d-flex mb-2">
+                                  @*   <div class="d-flex mb-2">
                                         @{
                                             List<string> topicsList = new List<string>(item.EventTopics.Split(","));
                                         }
@@ -99,7 +99,7 @@
                                             <span class="text-primary px-2">|</span>
                                             <a class="text-primary text-uppercase text-decoration-none" href="/Home/HomeMysteriousEventsByTopic?topic=@topic">@topic</a>
                                         }
-                                    </div>
+                                    </div> *@
                                     <a class="h5 m-0 text-decoration-none" href="/Home/HomeMysteriousEventDetail/@item.EventID">@item.EventTitle</a>
                                 </div>
                             </div>
