--- a/MysteriousEncyclopedia/Views/Shared/Components/HomeTagsOnSidebar/Default.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/Components/HomeTagsOnSidebar/Default.cshtml
@@ -1,15 +1,15 @@
 ﻿<div class="mb-5">
     <h4 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tags</h4>
     <div class="d-flex flex-wrap m-n1">
-        <a href="" class="btn btn-light m-1">Mystery</a>
-        <a href="" class="btn btn-light m-1">Encyclopedia</a>
-        <a href="" class="btn btn-light m-1">Mysterious Encyclopedia</a>
-        <a href="" class="btn btn-light m-1">Legends</a>
-        <a href="" class="btn btn-light m-1">Strange Happenings</a>
-        <a href="" class="btn btn-light m-1">Mysterious Places</a>
-        <a href="" class="btn btn-light m-1">Secret Societies</a>
-        <a href="" class="btn btn-light m-1">Unsolved</a>
-        <a href="" class="btn btn-light m-1">Anomalies</a>
-        <a href="" class="btn btn-light m-1">Paranormal</a>
+        <a href="#" class="btn btn-light m-1">Mystery</a>
+        <a href="#" class="btn btn-light m-1">Encyclopedia</a>
+        <a href="#" class="btn btn-light m-1">Mysterious Encyclopedia</a>
+        <a href="#" class="btn btn-light m-1">Legends</a>
+        <a href="#" class="btn btn-light m-1">Strange Happenings</a>
+        <a href="#" class="btn btn-light m-1">Mysterious Places</a>
+        <a href="#" class="btn btn-light m-1">Secret Societies</a>
+        <a href="#" class="btn btn-light m-1">Unsolved</a>
+        <a href="#" class="btn btn-light m-1">Anomalies</a>
+        <a href="#" class="btn btn-light m-1">Paranormal</a>
     </div>
 </div>
