--- a/MysteriousEncyclopedia/Views/Home/HomePage.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomePage.cshtml
@@ -9,22 +9,22 @@
     <div id="header-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="~/HomeTheme/img/carousel-1.jpg" alt="Image">
+                <img class="w-100" style="max-height: 1080px;" src="~/HomeTheme/img/carousel-1.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
-                        <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
-                        <h1 class="display-3 text-white mb-md-4">Let's Discover The World Together</h1>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Book Now</a>
+                        <h4 class="text-white text-uppercase mb-md-3">Mysteries</h4>
+                        <h4 class="font-weight-lighter text-white mb-md-4">Dive into the enigmatic realms of our encyclopedic wonderland, where mysteries unfold with each click</h4>
+                        <a href="/Home/HomeMysteriousEventList/" class="btn btn-primary py-md-3 px-md-5 mt-2">Start Reading</a>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="~/HomeTheme/img/carousel-2.jpg" alt="Image">
+                <img class="w-100" style="max-height: 1080px;" src="~/HomeTheme/img/carousel-2.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 900px;">
-                        <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
-                        <h1 class="display-3 text-white mb-md-4">Discover Amazing Places With Us</h1>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Book Now</a>
+                        <h4 class="text-white text-uppercase mb-md-3">Unknowns</h4>
+                        <h4 class="font-weight-lighter text-white mb-md-4">Discover the secrets of the unknown in history, science, and the inexplicable on our captivating platform</h4>
+                        <a href="/Home/HomeMysteriousEventList/" class="btn btn-primary py-md-3 px-md-5 mt-2">Start Reading</a>
                     </div>
                 </div>
             </div>
