--- a/MysteriousEncyclopedia/Views/Shared/Components/TopicsInHomeMysteriousEvents/Default.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/Components/TopicsInHomeMysteriousEvents/Default.cshtml
@@ -2,7 +2,7 @@
 
 <div class="mb-5">
     <h4 class="text-uppercase mb-4" style="letter-spacing: 5px;">Topics</h4>
-    <div class="bg-white" style="padding: 30px;">
+    <div class="bg-white" style="padding: 30px;border-radius:20px">
         <ul class="list-inline m-0">
             @foreach (var item in Model)
             {
