--- a/MysteriousEncyclopedia/wwwroot/HomeTheme/css/style.css
+++ b/MysteriousEncyclopedia/wwwroot/HomeTheme/css/style.css
@@ -152,15 +152,15 @@ sup {
 }
 
 a {
-  color: #7AB730;
-  text-decoration: none;
-  background-color: transparent;
+    color: #198754;
+    text-decoration: none;
+    background-color: transparent;
 }
 
-a:hover {
-  color: #527a20;
-  text-decoration: underline;
-}
+    a:hover {
+        color: #198754;
+        text-decoration: underline;
+    }
 
 a:not([href]):not([class]) {
   color: inherit;
@@ -1905,11 +1905,11 @@ pre code {
 }
 
 .form-control:focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #b8e087;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(122, 183, 48, 0.25);
+    color: #495057;
+    background-color: #fff;
+    border-color: #198754;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.25);
 }
 
 .form-control::placeholder {
@@ -2138,12 +2138,12 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:valid:checked ~ .custom-control-label::before, .custom-control-input.is-valid:checked ~ .custom-control-label::before {
-  border-color: #34ce57;
-  background-color: #34ce57;
+    border-color: #198754;
+    background-color: #198754;
 }
 
 .was-validated .custom-control-input:valid:focus ~ .custom-control-label::before, .custom-control-input.is-valid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.25);
 }
 
 .was-validated .custom-control-input:valid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-valid:focus:not(:checked) ~ .custom-control-label::before {
@@ -2327,6 +2327,7 @@ textarea.form-control {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
+  border-radius:10px !important;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -2364,40 +2365,40 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #7AB730;
-  border-color: #7AB730;
+    color: #fff;
+    background-color: #198754;
+    border-color: #198754;
 }
 
-.btn-primary:hover {
-  color: #fff;
-  background-color: #669928;
-  border-color: #5f8f25;
-}
+    .btn-primary:hover {
+        color: #fff;
+        background-color: #24963e;
+        border-color: #198754;
+    }
 
-.btn-primary:focus, .btn-primary.focus {
-  color: #fff;
-  background-color: #669928;
-  border-color: #5f8f25;
-  box-shadow: 0 0 0 0.2rem rgba(142, 194, 79, 0.5);
-}
+    .btn-primary:focus, .btn-primary.focus {
+        color: #fff;
+        background-color: #24963e;
+        border-color: #198754;
+        box-shadow: 0 0 0 0.2rem rgba(36, 150, 162, 0.5);
+    }
 
-.btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #7AB730;
-  border-color: #7AB730;
-}
+    .btn-primary.disabled, .btn-primary:disabled {
+        color: #fff;
+        background-color: #198754;
+        border-color: #198754;
+    }
 
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #5f8f25;
-  border-color: #588423;
-}
+    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+    .show > .btn-primary.dropdown-toggle {
+        color: #fff;
+        background-color: #198754;
+        border-color: #24963e;
+    }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(142, 194, 79, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(36, 150, 162, 0.5);
 }
 
 .btn-secondary {
@@ -2660,35 +2661,35 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #7AB730;
-  border-color: #7AB730;
+    color: #198754;
+    border-color: #198754;
 }
 
-.btn-outline-primary:hover {
-  color: #fff;
-  background-color: #7AB730;
-  border-color: #7AB730;
-}
+    .btn-outline-primary:hover {
+        color: #fff;
+        background-color: #198754;
+        border-color: #198754;
+    }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(122, 183, 48, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.5);
 }
 
-.btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #7AB730;
-  background-color: transparent;
-}
+    .btn-outline-primary.disabled, .btn-outline-primary:disabled {
+        color: #198754;
+        background-color: transparent;
+    }
 
-.btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
-.show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #7AB730;
-  border-color: #7AB730;
-}
+    .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
+    .show > .btn-outline-primary.dropdown-toggle {
+        color: #fff;
+        background-color: #198754;
+        border-color: #24963e;
+    }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(122, 183, 48, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3501,19 +3502,19 @@ input[type="button"].btn-block {
   opacity: 0;
 }
 
-.custom-control-input:checked ~ .custom-control-label::before {
-  color: #fff;
-  border-color: #7AB730;
-  background-color: #7AB730;
-}
+    .custom-control-input:checked ~ .custom-control-label::before {
+        color: #fff;
+        border-color: #198754;
+        background-color: #198754;
+    }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(122, 183, 48, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.25);
 }
 
-.custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #b8e087;
-}
+    .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
+        border-color: #198754;
+    }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
@@ -3564,8 +3565,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #7AB730;
-  background-color: #7AB730;
+    border-color: #198754;
+    background-color: #198754;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4577,28 +4578,32 @@ input[type="button"].btn-block {
 }
 
 .page-link {
-  position: relative;
-  display: block;
-  padding: 0.5rem 0.75rem;
-  margin-left: -1px;
-  line-height: 1.25;
-  color: #7AB730;
-  background-color: #fff;
-  border: 1px solid #dee2e6;
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    color: #fff;
+    background-color: #198754;
+    border-radius: 10px;
 }
 
-.page-link:hover {
-  z-index: 2;
-  color: #527a20;
-  text-decoration: none;
-  background-color: #e9ecef;
-  border-color: #dee2e6;
-}
+    .page-link a {
+        color: #fff;
+    }
+
+    .page-link:hover {
+        z-index: 2;
+        color: #fff;
+        text-decoration: none;
+        background-color: #24963e;
+        border-color: #24963e;
+    }
 
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(122, 183, 48, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(25, 135, 84, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4669,18 +4674,18 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #7AB730;
+    color: #fff;
+    background-color: #198754;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #fff;
-  background-color: #5f8f25;
+    color: #fff;
+    background-color: #24963e;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(122, 183, 48, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(36, 150, 62, 0.5);
 }
 
 .badge-secondary {
@@ -9264,11 +9269,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #7AB730 !important;
+    color: #198754 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #527a20 !important;
+    color: #24963e !important;
 }
 
 .text-secondary {
@@ -9518,10 +9523,10 @@ h6,
   outline: none;
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-  color: #7AB730;
-}
+    .navbar-light .navbar-nav .nav-link:hover,
+    .navbar-light .navbar-nav .nav-link.active {
+        color: #198754;
+    }
 
 @media (max-width: 991.98px) {
   .navbar-light .navbar-nav .nav-link {
@@ -9569,8 +9574,8 @@ h6,
 }
 
 .page-header {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/carousel-2.jpg), no-repeat center center;
-  background-size: cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/carousel-3.png), no-repeat center center;
+    background-size: cover;
 }
 
 .destination-item img {
@@ -9607,28 +9612,29 @@ h6,
 
 .service-item {
   transition: .5s;
+  border-radius:20px;
 }
 
 .service-item:hover {
   box-shadow: 0 0 30px #CCCCCC;
 }
 
-.service-item i {
-  width: 75px;
-  height: 75px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #7AB730;
-  background: #FFFFFF;
-  color: #7AB730;
-  transition: .5s;
-}
+    .service-item i {
+        width: 75px;
+        height: 75px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #198754;
+        background: #FFFFFF;
+        color: #198754;
+        transition: .5s;
+    }
 
-.service-item:hover i {
-  background: #7AB730;
-  color: #FFFFFF;
-}
+    .service-item:hover i {
+        background: #198754;
+        color: #FFFFFF;
+    }
 
 .package-item {
   transition: .5s;
@@ -9739,29 +9745,29 @@ h6,
 }
 
 .blog-date {
-  position: absolute;
-  width: 60px;
-  height: 45px;
-  top: 30px;
-  left: -15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background: #7AB730;
+    position: absolute;
+    width: 60px;
+    height: 45px;
+    top: 30px;
+    left: -15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: #198754;
 }
 
-.blog-date::after {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 0;
-  top: -15px;
-  left: 0;
-  border: 8px solid;
-  border-color: transparent #5f8f25 #5f8f25 transparent;
-  z-index: -1;
-}
+    .blog-date::after {
+        position: absolute;
+        content: "";
+        width: 0;
+        height: 0;
+        top: -15px;
+        left: 0;
+        border: 8px solid;
+        border-color: transparent #24963e #24963e transparent;
+        z-index: -1;
+    }
 
 .contact-form .help-block ul {
   margin: 0;
