--- a/MysteriousEncyclopedia/Views/_ViewImports.cshtml
+++ b/MysteriousEncyclopedia/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using MysteriousEncyclopedia.Models.DTOs.EventDto
 @using MysteriousEncyclopedia.Models.DTOs.ResourceDto
 @using MysteriousEncyclopedia.Models.DTOs.ContactDto
+@using MysteriousEncyclopedia.Models.DTOs.ReferenceDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
