admin template changes made

--- a/MysteriousEncyclopedia/wwwroot/AdminTheme/template/scss/_variables.scss
+++ b/MysteriousEncyclopedia/wwwroot/AdminTheme/template/scss/_variables.scss
@@ -241,28 +241,28 @@ $sidebar-width-mini: 185px;
 $sidebar-width-icon: 70px;
 
 
-$sidebar-bg: #27293d;
-$sidebar-menu-color: #959cb6;
+$sidebar-bg: #198754;
+$sidebar-menu-color: #eaeaea;
 $sidebar-menu-active-bg: $content-bg;
-$sidebar-menu-active-color: #dfe4fa;
-$sidebar-menu-hover-bg: #3a3f51;
-$sidebar-menu-hover-color: #d0cfcf;
+$sidebar-menu-active-color: #eaeaea;
+$sidebar-menu-hover-bg: #24963e;
+$sidebar-menu-hover-color: #FFF;
 $sidebar-submenu-color: $sidebar-menu-color;
 $sidebar-submenu-hover-bg: initial;
-$sidebar-submenu-hover-color: #bebdc2;
-$sidebar-submenu-active-color: #dfe4fa;
+$sidebar-submenu-hover-color: #fff;
+$sidebar-submenu-active-color: #eaeaea;
 $sidebar-menu-icon-color: $sidebar-menu-color;
 $sidebar-menu-arrow-color: $sidebar-menu-color;
 
-$sidebar-dark-bg: #223e9c;
+$sidebar-dark-bg: #198754;
 $sidebar-dark-menu-color: $white;
-$sidebar-dark-menu-active-bg: #183188;
+$sidebar-dark-menu-active-bg: #198754;
 $sidebar-dark-menu-active-color: $white;
 $sidebar-dark-menu-hover-bg: $sidebar-dark-menu-active-bg;
 $sidebar-dark-menu-hover-color: $white;
 $sidebar-dark-submenu-color: $sidebar-dark-menu-color;
 $sidebar-dark-submenu-hover-bg: initial;
-$sidebar-dark-submenu-hover-color: #93a8ff;
+$sidebar-dark-submenu-hover-color: #eaeaea;
 $sidebar-dark-submenu-active-color: $sidebar-dark-submenu-hover-color;
 $sidebar-dark-menu-icon-color: $sidebar-dark-menu-color;
 $sidebar-dark-menu-arrow-color: $white;
