--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -1,19 +1,29 @@
 ﻿
-<nav class="sidebar sidebar-offcanvas" id="sidebar">
+<style>
+   .nav-link{
+        background: transparent !important;
+        color:#fff !important;
+   }
+
+   .nav-link:hover{
+        background: #198754 !important;
+        color: #000 !important;
+   }
+
+   .nav-item .nav-item .nav-link:hover{
+       background: transparent !important;
+        color: #dddedf !important;
+   }
+
+
+
+</style>
+
+
+<nav class="sidebar sidebar-offcanvas" id="sidebar" style="background:linear-gradient(153deg, rgba(0,0,0,1) 0%, rgba(25,135,84,1) 100%);">
     <ul class="nav">
         <li class="nav-item sidebar-category">
             <p>Navigation</p>
-            <span></span>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
-                <i class="mdi mdi-view-quilt menu-icon"></i>
-                <span class="menu-title">Dashboard</span>
-                <div class="badge badge-info badge-pill">2</div>
-            </a>
-        </li>
-        <li class="nav-item sidebar-category">
-            <p>Components</p>
             <span></span>
         </li>
         <li class="nav-item">
@@ -28,14 +38,14 @@
                 <span class="menu-title">Events</span>
                 <i class="menu-arrow"></i>
             </a>
-            <div class="collapse" id="ui-basic">
+            <div class="collapse" id="ui-basic" >
                 <ul class="nav flex-column sub-menu">
                     <li class="nav-item"> <a class="nav-link" href="/MysteriousEvent/MysteriousEventList/">Event List</a></li>
                     <li class="nav-item"> <a class="nav-link" href="/MysteriousEvent/MysteriousEventAdd/">New Event</a></li>
                 </ul>
             </div>
         </li>
-      
+
         <li class="nav-item">
             <a class="nav-link" href="../../pages/charts/chartjs.html">
                 <i class="mdi mdi-chart-pie menu-icon"></i>
@@ -54,35 +64,6 @@
                 <span class="menu-title">Icons</span>
             </a>
         </li>
-        <li class="nav-item sidebar-category">
-            <p>Pages</p>
-            <span></span>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-                <i class="mdi mdi-account menu-icon"></i>
-                <span class="menu-title">User Pages</span>
-                <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="auth">
-                <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"> <a class="nav-link" href="../../pages/samples/login.html"> Login </a></li>
-                    <li class="nav-item"> <a class="nav-link" href="../../pages/samples/login-2.html"> Login 2 </a></li>
-                    <li class="nav-item"> <a class="nav-link" href="../../pages/samples/register.html"> Register </a></li>
-                    <li class="nav-item"> <a class="nav-link" href="../../pages/samples/register-2.html"> Register 2 </a></li>
-                    <li class="nav-item"> <a class="nav-link" href="../../pages/samples/lock-screen.html"> Lockscreen </a></li>
-                </ul>
-            </div>
-        </li>
-        <li class="nav-item sidebar-category">
-            <p>Apps</p>
-            <span></span>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../../docs/documentation.html">
-                <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-                <span class="menu-title">Documentation</span>
-            </a>
-        </li>
+
     </ul>
 </nav>
