--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminTopNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminTopNavbarPartialView.cshtml
@@ -1,12 +1,12 @@
 ﻿
-<nav class="navbar col-lg-12 col-12 px-0 py-0 py-lg-4 d-flex flex-row">
+<nav class="navbar col-lg-12 col-12 px-0 py-0 d-flex flex-row">
     <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-menu"></span>
         </button>
         <div class="navbar-brand-wrapper">
-            <a class="navbar-brand brand-logo" href="../../index.html"><img src="~/AdminTheme/template/images/logo.svg" alt="logo" /></a>
-            <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="~/AdminTheme/template/images/logo-mini.svg" alt="logo" /></a>
+            <a class="navbar-brand brand-logo" href="../../index.html"><img src="~/AdminTheme/template/images/School.png" alt="logo" /></a>
+            <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="~/AdminTheme/template/images/School.png" alt="logo" /></a>
         </div>
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item">
