--- a/MysteriousEncyclopedia/Views/Shared/_AdminLayout.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/_AdminLayout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/AdminTheme/template/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/AdminTheme/template/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/AdminTheme/template/css/style.css">
-    <link rel="shortcut icon" href="~/AdminTheme/template/images/favicon.png" />
+    <link href="~/HomeTheme/img/favicon.ico" rel="icon">
     <script src="https://cdn.tiny.cloud/1/ao5ajp544od03ibdmuq9q6lcc8k9bf9ju4unro064aj5ygv1/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
