--- a/MysteriousEncyclopedia/wwwroot/AdminTheme/template/css/style.css
+++ b/MysteriousEncyclopedia/wwwroot/AdminTheme/template/css/style.css
@@ -12502,7 +12502,7 @@ fieldset:disabled .btn {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0d6efd;
+  color: #fff;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -12514,7 +12514,7 @@ fieldset:disabled .btn {
 }
 
 .nav-link:hover, .nav-link:focus {
-  color: #0a58ca;
+    color: #198754;
 }
 
 .nav-link.disabled {
@@ -12565,11 +12565,11 @@ fieldset:disabled .btn {
   border-radius: 0.25rem;
 }
 
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #0d6efd;
-}
+    .nav-pills .nav-link.active,
+    .nav-pills .show > .nav-link {
+        color: #fff;
+        background-color: #198754;
+    }
 
 .nav-fill > .nav-link,
 .nav-fill .nav-item {
