--- a/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventUpdate.cshtml
+++ b/MysteriousEncyclopedia/Views/MysteriousEvent/MysteriousEventUpdate.cshtml
@@ -53,8 +53,9 @@
                             Visible
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-info btn-rounded me-2">Update</button>
-                    <a href="/MysteriousEvent/MysteriousEventList/" class="btn btn-dark btn-rounded">Cancel</a>
+                    <button type="submit" class="btn btn-info btn-rounded me-2 mt-2">Update</button>
+                    <a href="/MysteriousEvent/ResourcesByEventID/@Model.EventID" class="btn btn-danger btn-rounded mt-2">Resources</a>
+                    <a href="/MysteriousEvent/MysteriousEventList/" class="btn btn-dark btn-rounded mt-2">Cancel</a>
                 </form>
             </div>
         </div>
