content added, and pagings are rearranged. Events displayed from last to first

--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -45,23 +45,47 @@
                 </ul>
             </div>
         </li>
-
+        <li class="nav-item">
+            <a class="nav-link" href="/Reference/ReferencesList/">
+                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <span class="menu-title">References</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Home/HomePage">
+                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <span class="menu-title">Website</span>
+            </a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="../../pages/charts/chartjs.html">
                 <i class="mdi mdi-chart-pie menu-icon"></i>
-                <span class="menu-title">Charts</span>
+                <span class="menu-title">Contacts</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/tables/basic-table.html">
-                <i class="mdi mdi-grid-large menu-icon"></i>
-                <span class="menu-title">Tables</span>
+            <a class="nav-link" href="../../pages/charts/chartjs.html">
+                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <span class="menu-title">Requests</span>
+            </a>
+        </li>
+    
+        <li class="nav-item">
+            <a class="nav-link" href="../../pages/charts/chartjs.html">
+                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <span class="menu-title">Users</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/icons/mdi.html">
-                <i class="mdi mdi-emoticon menu-icon"></i>
-                <span class="menu-title">Icons</span>
+            <a class="nav-link" href="../../pages/charts/chartjs.html">
+                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <span class="menu-title">Settings</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../../pages/charts/chartjs.html">
+                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <span class="menu-title">Log Out</span>
             </a>
         </li>
 
