ResourceOfEvent delete action, listing and deleting contacts in admin

--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -34,7 +34,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-                <i class="mdi mdi-palette menu-icon"></i>
+                <i class="mdi mdi-view-grid menu-icon"></i>
                 <span class="menu-title">Events</span>
                 <i class="menu-arrow"></i>
             </a>
@@ -47,19 +47,19 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Reference/ReferencesList/">
-                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <i class="mdi mdi-source-branch menu-icon"></i>
                 <span class="menu-title">References</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Home/HomePage">
-                <i class="mdi mdi-chart-pie menu-icon"></i>
+                <i class="mdi mdi-home menu-icon"></i>
                 <span class="menu-title">Website</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
-                <i class="mdi mdi-chart-pie menu-icon"></i>
+            <a class="nav-link" href="/Contact/ListContacts/">
+                <i class="mdi mdi-message-text menu-icon"></i>
                 <span class="menu-title">Contacts</span>
             </a>
         </li>
