--- a/MysteriousEncyclopedia/Views/Home/HomeContact.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeContact.cshtml
@@ -49,8 +49,8 @@
                     <form novalidate="novalidate" method="post">
                         <div class="form-row">
                             <div class="control-group col-sm-6">
-                                <input type="text" asp-for="ContactName" class="form-control p-4 my-3" placeholder="Your Name">
-                                <span class="text-danger" asp-validation-for="@Model.ContactName"></span>
+                                <input type="text" asp-for="ContactNameSurname" class="form-control p-4 my-3" placeholder="Your Name">
+                                <span class="text-danger" asp-validation-for="@Model.ContactNameSurname"></span>
                             </div>
                             <div class="control-group col-sm-6">
                                 <input type="email" asp-for="ContactEmail" class="form-control p-4 my-3" placeholder="Your Email">
