request add page done, request model done, repository and interface of request done. Add, delete are not done, also in requestrepository(add, delete)

--- a/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
@@ -18,7 +18,7 @@
                         <div class="dropdown-menu border-0 rounded-0 m-0">
                             <a href="blog.html" class="dropdown-item">Login</a>
                             <a href="single.html" class="dropdown-item">Register</a>
-                            <a href="destination.html" class="dropdown-item">Request</a>
+                            <a href="/Contact/MakeRequest/" class="dropdown-item">Request</a>
                         </div>
                     </div>
                     <a href="/Home/HomeResources/" class="nav-item nav-link">Resources</a>
