--- a/MysteriousEncyclopedia/Views/Home/HomeHeaderPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeHeaderPartialView.cshtml
@@ -1,6 +1,8 @@
 ﻿<head>
     <meta charset="utf-8">
-    <title>TRAVELER - Free Travel Website Template</title>
+    <title>
+        Mysterious Encyclopedia
+    </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
