--- a/MysteriousEncyclopedia/Views/_ViewImports.cshtml
+++ b/MysteriousEncyclopedia/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using MysteriousEncyclopedia.Models.DTOs.ResourceDto
 @using MysteriousEncyclopedia.Models.DTOs.ContactDto
 @using MysteriousEncyclopedia.Models.DTOs.ReferenceDto
+@using MysteriousEncyclopedia.Models.DTOs.Request
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
