identity added, registration completed, login page done but codes are not written

--- a/MysteriousEncyclopedia/Views/_ViewImports.cshtml
+++ b/MysteriousEncyclopedia/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using MysteriousEncyclopedia.Models.DTOs.ContactDto
 @using MysteriousEncyclopedia.Models.DTOs.ReferenceDto
 @using MysteriousEncyclopedia.Models.DTOs.Request
+@using MysteriousEncyclopedia.Models.DTOs.AccountDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
