--- a/MysteriousEncyclopedia/Views/Shared/_Layout.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
                         <p><img src="~/HomeTheme/img/School.png" class="mr-2" style="height:18px">Mysterious Encyclopedia</p>
                         <p class="text-body px-3">|</p>
                         <p><i class="fa fa-envelope mr-2"></i>Support:&nbsp; </p>
-                        <p>info@mysteriousencyclopedia.com</p>
+                        <p>info@mysteriousen.com</p>
                     </div>
                 </div>
                 @* <div class="col-lg-4 text-center text-lg-right">
