--- a/MysteriousEncyclopedia/Views/Home/HomeFooterPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeFooterPartialView.cshtml
@@ -27,7 +27,7 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
             <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope mr-2"></i>info@mysteriousencyclopedia.com</p>
+            <p><i class="fa fa-envelope mr-2"></i>info@mysteriousen.com</p>
         </div>
     </div>
 </div>
