--- a/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
@@ -15,9 +15,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User</a>
                         <div class="dropdown-menu border-0 rounded-0 m-0">
-                            <a href="blog.html" class="dropdown-item">Login</a>
-                            <a href="single.html" class="dropdown-item">Register</a>
-                            <a href="/Contact/MakeRequest/" class="dropdown-item">Request</a>
+                            <a href="/Account/SignIn" class="dropdown-item">Login</a>
+                            <a href="/Account/SignUp" class="dropdown-item">Register</a>
                         </div>
                     </div>
                     <a href="/Home/HomeResources/" class="nav-item nav-link">Resources</a>
