--- a/MysteriousEncyclopedia/Views/_ViewImports.cshtml
+++ b/MysteriousEncyclopedia/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using MysteriousEncyclopedia.Models.DTOs.ReferenceDto
 @using MysteriousEncyclopedia.Models.DTOs.Request
 @using MysteriousEncyclopedia.Models.DTOs.AccountDto
+@using MysteriousEncyclopedia.Models.DTOs.Comment
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
