request crud operations done in admin panel

--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -64,9 +64,16 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
-                <i class="mdi mdi-chart-pie menu-icon"></i>
+            <a class="nav-link" href="/Contact/RequestList/">
+                <i class="mdi mdi-file-send menu-icon"></i>
                 <span class="menu-title">Requests</span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/Contact/CommentList/">
+                <i class="mdi mdi-file-send menu-icon"></i>
+                <span class="menu-title">Comments</span>
             </a>
         </li>
     
