comment, reques crud is done in admin, home comment listing is done, rolling is done

--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -71,15 +71,15 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="/Contact/CommentList/">
+            <a class="nav-link" href="/Contact/ListComments/">
                 <i class="mdi mdi-file-send menu-icon"></i>
                 <span class="menu-title">Comments</span>
             </a>
         </li>
     
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
-                <i class="mdi mdi-chart-pie menu-icon"></i>
+            <a class="nav-link" href="/Account/UserList/">
+                <i class="mdi mdi mdi-account-multiple menu-icon"></i>
                 <span class="menu-title">Users</span>
             </a>
         </li>
