--- a/MysteriousEncyclopedia/Views/_ViewImports.cshtml
+++ b/MysteriousEncyclopedia/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using MysteriousEncyclopedia.Models.DTOs.Request
 @using MysteriousEncyclopedia.Models.DTOs.AccountDto
 @using MysteriousEncyclopedia.Models.DTOs.Comment
+@using MysteriousEncyclopedia.Models.DTOs.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
