--- a/MysteriousEncyclopedia/Views/Account/UserList.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/UserList.cshtml
@@ -1,11 +1,12 @@
 ﻿@using X.PagedList
 @using X.PagedList.Mvc.Core
 @using X.PagedList.Web.Common
-@model IPagedList<RequestDto>
+@model IPagedList<UserDto>
 @{
-    ViewData["Title"] = "List of Requests";
+    ViewData["Title"] = "User List";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 
 <style>
     .btn-primary a {
@@ -17,17 +18,16 @@
     <div class="col-lg-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Requests</h4>
+                <h4 class="card-title">Users</h4>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Username</th>
-                                <th>Date</th>
-                                <th>Details</th>
-                                <th>Delete</th>
-                                <th>Cancel</th>
-                                <th>Approve</th>
+                                <th>Email</th>
+                                <th>Email Confirmed</th>
+                                <th>Invalid Login</th>
+                                <th>Roles</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -35,21 +35,24 @@
                             {
                                 <tr>
                                     <td>@item.UserName</td>
-                                    <td>@item.RequestDate.ToShortDateString()</td>
-                                    <td><a href="/Contact/RequestDetail/@item.RequestID" class="btn btn-outline-dark btn-rounded btn-fw">Details</a></td>
-                                    <td><a href="/Contact/DeleteRequest/@item.RequestID" class="btn btn-outline-danger btn-rounded btn-fw">Delete</a></td>
-                                    @if(item.RequestStatus == "pending")
+                                    <td>@item.Email</td>
+                                    @if (item.EmailConfirmed == true)
                                     {
-                                        <td><a href="/Contact/CancelRequest/@item.RequestID" class="btn btn-outline-danger btn-rounded btn-fw">Cancel</a></td>
-
-                                        <td><a href="/Contact/ApproveRequest/@item.RequestID" class="btn btn-outline-info btn-rounded btn-fw">Approve</a></td>
+                                        <td><lable class="badge badge-info p-2 rounded">Yes</lable></td>
                                     }
+                                    else
+                                    {
+                                        <td><lable class="badge badge-danger p-2 rounded">No</lable></td>
+                                    }
+                                    <td>@item.AccessFailedCount</td>
+                                    <td><a href="/Account/UserRoles/@item.Id" class="btn btn-outline-info btn-rounded btn-fw">Roles</a></td>
+
                                 </tr>
                             }
                         </tbody>
                     </table>
                     <br />
-                    @Html.PagedListPager((IPagedList)Model, page => Url.Action("RequestList", new { page }), new PagedListRenderOptions
+                    @Html.PagedListPager((IPagedList)Model, page => Url.Action("UserList", new { page }), new PagedListRenderOptions
                {
                    UlElementClasses = new List<string> { "btn-group", "pb-2", "pb-lg-0" },
                    LiElementClasses = new List<string> { "btn", "btn-primary" }
@@ -59,5 +62,4 @@
         </div>
     </div>
 </div>
-
 
