user setting(password change(password validation is handled) and user log out is done

--- a/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
@@ -17,6 +17,8 @@
                         <div class="dropdown-menu border-0 rounded-0 m-0">
                             <a href="/Account/SignIn" class="dropdown-item">Login</a>
                             <a href="/Account/SignUp" class="dropdown-item">Register</a>
+                            <a href="/Account/Setting" class="dropdown-item">Settings</a>
+                            <a href="/Account/SignOut" class="dropdown-item">Logout</a>
                         </div>
                     </div>
                     <a href="/Home/HomeResources/" class="nav-item nav-link">Resources</a>
