mail confirmation, password recovery is done

--- a/MysteriousEncyclopedia/Views/Shared/_AccountLayout.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/_AccountLayout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/AdminTheme/template/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/AdminTheme/template/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/AdminTheme/template/css/style.css">
-    <link rel="shortcut icon" href="~/HomeTheme/img/favicon" />
+    <link rel="shortcut icon" href="~/HomeTheme/img/favicon.ico" />
     <style>
         .btn-success {
             background: #198754;
