--- a/MysteriousEncyclopedia/Views/Account/SignIn.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/SignIn.cshtml
@@ -36,6 +36,7 @@
  
     <div class="mt-3">
         <button type="submit" class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn">LOGIN</button>
+        <a href="/Account/PasswordReset/" class="text-primary float-end">Forgot Password?</a>
     </div>
     <div class="text-center mt-4 font-weight-light">
         Don't' have an account? <a href="/Account/SignUp/" class="text-primary">Register</a>
