titles of pages done, authorization in all controllers and in project level are done

--- a/MysteriousEncyclopedia/Views/Account/Setting.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/Setting.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserSettingViewModel
 @{
-    ViewData["Title"] = "User Setting";
+    ViewData["Title"] = "User Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
