--- a/MysteriousEncyclopedia/Views/Account/SignUp.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/SignUp.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SignUpDto
 @{
-    ViewData["Title"] = "MysteriousEncyclopedia - Register";
+    ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
