--- a/MysteriousEncyclopedia/Views/Contact/CommentDetail.cshtml
+++ b/MysteriousEncyclopedia/Views/Contact/CommentDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CommentDto
 @{
-    ViewData["Title"] = "CommentDetail";
+    ViewData["Title"] = "Comment Details";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
