--- a/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventDetail.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeMysteriousEventDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MysteriousEventDto
 @{
-    ViewData["Title"] = "Mysterious Event Detail";
+    ViewData["Title"] = "Event Detail";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
