--- a/MysteriousEncyclopedia/Views/Account/AdminLogin.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/AdminLogin.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-<h4>Login Here</h4>
-<h6 class="font-weight-light">You can login to your account</h6>
+<h4>Admin Login</h4>
+<h6 class="font-weight-light">Admin Login Form</h6>
 <form class="pt-3" method="post">
     <div class="form-group">
 
@@ -33,14 +33,12 @@
         <span class="text-danger" asp-validation-for="@Model.password"></span>
     </div>
 
- 
+
     <div class="mt-3">
         <button type="submit" class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn">LOGIN</button>
         <a href="/Account/PasswordReset/" class="text-primary float-end">Forgot Password?</a>
     </div>
-    <div class="text-center mt-4 font-weight-light">
-        Don't' have an account? <a href="/Account/SignUp/" class="text-primary">Register</a>
-    </div>
     <div class="text-danger mt-3" asp-validation-summary="ModelOnly">
     </div>
 </form>
+
