--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -84,13 +84,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
-                <i class="mdi mdi-chart-pie menu-icon"></i>
-                <span class="menu-title">Settings</span>
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
+            <a class="nav-link" href="/Account/SignOut">
                 <i class="mdi mdi-chart-pie menu-icon"></i>
                 <span class="menu-title">Log Out</span>
             </a>
