--- a/MysteriousEncyclopedia/Views/Home/HomeHeaderPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeHeaderPartialView.cshtml
@@ -1,7 +1,7 @@
 ﻿<head>
     <meta charset="utf-8">
     <title>
-        Mysterious Encyclopedia
+        Mysterious Encyclopedia - @ViewData["Title"]
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
