--- a/MysteriousEncyclopedia/Views/Shared/_AdminLayout.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/_AdminLayout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Spica Admin</title>
+    <title>MysteriousEncyclopedia - @ViewData["Title"]</title>
     <link rel="stylesheet" href="~/AdminTheme/template/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/AdminTheme/template/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/AdminTheme/template/css/style.css">
