adding routing to home, contact, and all methods in Account controller

--- a/MysteriousEncyclopedia/Views/Account/AdminLogin.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/AdminLogin.cshtml
@@ -36,7 +36,7 @@
 
     <div class="mt-3">
         <button type="submit" class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn">LOGIN</button>
-        <a href="/Account/PasswordReset/" class="text-primary float-end">Forgot Password?</a>
+        <a href="/passwordrecovery" class="text-primary float-end">Forgot Password?</a>
     </div>
     <div class="text-danger mt-3" asp-validation-summary="ModelOnly">
     </div>
