--- a/MysteriousEncyclopedia/Views/Account/MailConfirm.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/MailConfirm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EmailConfirm
 @{
-    ViewData["Title"] = "Mail Confirmation";
+    ViewData["Title"] = "Mail Verify";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
