--- a/MysteriousEncyclopedia/Views/Account/SignUp.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/SignUp.cshtml
@@ -62,7 +62,7 @@
     <div class="mb-4">
         <div class="form-check form-check-success">
             <label class="form-check-label">
-                <input type="checkbox" class="form-check-input">
+                <input type="checkbox" class="form-check-input" required>
                 I agree terms and conditions
             </label>
         </div>
@@ -71,7 +71,7 @@
         <button type="submit" class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn">REGISTER</button>
     </div>
     <div class="text-center mt-4 font-weight-light">
-        Already have an account? <a href="/Account/SignIn/" class="text-primary">Login</a>
+        Already have an account? <a href="/login" class="text-primary">Login</a>
     </div>
     <div class="text-danger" asp-validation-summary="ModelOnly">
     </div>
