--- a/MysteriousEncyclopedia/Views/Account/UserList.cshtml
+++ b/MysteriousEncyclopedia/Views/Account/UserList.cshtml
@@ -45,7 +45,7 @@
                                         <td><lable class="badge badge-danger p-2 rounded">No</lable></td>
                                     }
                                     <td>@item.AccessFailedCount</td>
-                                    <td><a href="/Account/UserRoles/@item.Id" class="btn btn-outline-info btn-rounded btn-fw">Roles</a></td>
+                                    <td><a href="/showuserroles/@item.Id" class="btn btn-outline-info btn-rounded btn-fw">Roles</a></td>
 
                                 </tr>
                             }
