--- a/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/Home/HomeNavbarPartialView.cshtml
@@ -2,7 +2,7 @@
 <div class="container-fluid position-relative nav-bar p-0">
     <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
         <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
-            <a href="/Home/HomePage/" class="navbar-brand">
+            <a href="/home" class="navbar-brand">
                 <h1 class="m-0 text-primary"><span class="text-dark">Mysterious</span>En</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -10,15 +10,15 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
-                    <a href="/Home/HomeMysteriousEventList/" class="nav-item nav-link">Events</a>
-                    <a href="/Home/HomeContact/" class="nav-item nav-link">Contact</a>
+                    <a href="/mysteriousevents" class="nav-item nav-link">Events</a>
+                    <a href="/contactus" class="nav-item nav-link">Contact</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User</a>
                         <div class="dropdown-menu border-0 rounded-0 m-0">
-                            <a href="/Account/SignIn" class="dropdown-item">Login</a>
-                            <a href="/Account/SignUp" class="dropdown-item">Register</a>
-                            <a href="/Account/Setting" class="dropdown-item">Settings</a>
-                            <a href="/Account/SignOut" class="dropdown-item">Logout</a>
+                            <a href="/login" class="dropdown-item">Login</a>
+                            <a href="/register" class="dropdown-item">Register</a>
+                            <a href="/usersetting" class="dropdown-item">Settings</a>
+                            <a href="/logout" class="dropdown-item">Logout</a>
                         </div>
                     </div>
                     <a href="/Home/HomeResources/" class="nav-item nav-link">Resources</a>
