--- a/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
+++ b/MysteriousEncyclopedia/Views/AdminLayouts/AdminSidebarPartialView.cshtml
@@ -78,13 +78,13 @@
         </li>
     
         <li class="nav-item">
-            <a class="nav-link" href="/Account/UserList/">
+            <a class="nav-link" href="/showusers">
                 <i class="mdi mdi mdi-account-multiple menu-icon"></i>
                 <span class="menu-title">Users</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Account/SignOut">
+            <a class="nav-link" href="/logout">
                 <i class="mdi mdi-chart-pie menu-icon"></i>
                 <span class="menu-title">Log Out</span>
             </a>
