--- a/MysteriousEncyclopedia/Views/Shared/_AccountLayout.cshtml
+++ b/MysteriousEncyclopedia/Views/Shared/_AccountLayout.cshtml
@@ -38,7 +38,7 @@
                 <div class="col-lg-6 d-flex align-items-center justify-content-center">
                     <div class="auth-form-transparent text-left p-3">
                         <div class="brand-logo">
-                            <a href="/Home/HomePage/">
+                            <a href="/home">
                             <img src="~/AdminTheme/template/images/RegisterLogo.png" alt="logo" style="width:80px">
                                 </a>
                         </div>
